<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/recipe_detail_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/recipe_video_player"
            android:layout_width="match_parent"
            android:layout_height="@dimen/video_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:resize_mode="fixed_height" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipe_video_player">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/recipe_description_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@android:color/holo_orange_light">

                <TextView
                    android:id="@+id/recipe_description_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textColor="@android:color/black" />

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/recipe_detail_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/navigation_card_view"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textAlignment="center"
                    app:cardBackgroundColor="@android:color/white">

                    <TextView
                        android:id="@+id/back_button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="@string/back_label"
                        android:textColor="@android:color/black" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/navigation_card_view_2"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardBackgroundColor="@android:color/black">

                    <TextView
                        android:id="@+id/forward_button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="@string/next_label"
                        android:textColor="@android:color/white" />

                </android.support.v7.widget.CardView>
            </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>
</layout>