<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_steps"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingBottom="16dp" />

</android.support.constraint.ConstraintLayout>
